<resources>
    <string name="app_name">Depression</string>
    <string name="email">Email</string>
    <string name="senha">Senha</string>
    <string name="entra">ENTRAR</string>
    <string name="eSenha">Esqueci a Senha</string>
    <string name="Cadastro">Cadastrar-se</string>
    <string name="nUsuario">Nome de Usuário</string>
    <string name="cSenha">Confirme senha</string>
    <string name="btnCadastrar">Cadastrar</string>
    <string name="btnRedefinir">Redefinir</string>
    <string name="Enviado">Foi enviado um código para o seu email</string>
    <string name="Enviado2">Insira o código abaixo:</string>
    <string name="Codigo">Código</string>
    <string name="Voltar">VOLTAR</string>
    <string name="Confirmar">Confirmar</string>
    <string name="nSenha">NOVA SENHA</string>
    <string name="bVindo">Bem Vindo(a)</string>
    <string name="bt1">CHAT</string>
    <string name="bt2">QUIZ</string>
    <string name="bt3">INFORME-SE</string>
    <string name="bt4">CONTROLE</string>
    <string name="sair">Sair</string>
    <string name="info">Informações</string>

</resources>
