<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".cadastrar">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imgCadastro"
            android:layout_width="150dp"
            android:layout_height="150dp"
            app:srcCompat="@drawable/lg_img" />

        <ImageView
            android:id="@+id/imgCadastrotx"
            android:layout_width="170dp"
            android:layout_height="90dp"
            app:srcCompat="@drawable/tt_cadastro" />

        <EditText
            android:id="@+id/cadastroNome"
            android:layout_width="300dp"
            android:layout_height="66dp"
            android:ems="10"
            android:hint="@string/nUsuario"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/cadastroEmail"
            android:layout_width="300dp"
            android:layout_height="66dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:ems="10"
            android:hint="@string/email"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/cadastroSenha"
            android:layout_width="300dp"
            android:layout_height="66dp"
            android:ems="10"
            android:hint="@string/senha"
            android:inputType="textPassword" />


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btVoltar"
                android:layout_width="100dp"
                android:layout_height="40dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="30dp"
                android:layout_marginBottom="8dp"
                android:background="#ffffff"
                android:text="@string/Voltar"
                android:textAlignment="center"
                android:textColor="#000000" />

            <Button
                android:id="@+id/btConfirmar"
                android:layout_width="100dp"
                android:layout_height="40dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="30dp"
                android:layout_marginBottom="8dp"
                android:background="#2E3C59"
                android:text="@string/btnCadastrar"
                android:textAlignment="center" />
        </LinearLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>