<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".esqSenha">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".esqSenha">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorPrimary"
            android:gravity="center"
            android:orientation="vertical"
            tools:layout_editor_absoluteX="52dp"
            tools:layout_editor_absoluteY="52dp">

            <ImageView
                android:id="@+id/imgLogo1"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_marginTop="-30dp"
                app:srcCompat="@drawable/lg_img" />

            <ImageView
                android:id="@+id/imgEsqueci"
                android:layout_width="280dp"
                android:layout_height="100dp"
                android:src="@drawable/tt_esqueci" />

            <EditText
                android:id="@+id/edEmail"
                android:layout_width="300dp"
                android:layout_height="66dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="36dp"
                android:layout_marginEnd="8dp"
                android:ems="10"
                android:hint="@string/email"
                android:inputType="textEmailAddress" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btVoltar"
                    android:layout_width="100dp"
                    android:layout_height="40dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginRight="30dp"
                    android:layout_marginBottom="8dp"
                    android:background="#ffffff"
                    android:text="@string/Voltar"
                    android:textAlignment="center"
                    android:textColor="#000000" />

                <Button
                    android:id="@+id/btConfirmar"
                    android:layout_width="100dp"
                    android:layout_height="40dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginRight="30dp"
                    android:layout_marginBottom="8dp"
                    android:background="#2E3C59"
                    android:text="@string/btnCadastrar"
                    android:textAlignment="center" />
            </LinearLayout>

        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>